--- a/src/app.scss
+++ b/src/app.scss
@@ -1,12 +1,26 @@
 @import "@material/typography/mdc-typography";
 
+html,
+body,
+#app {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 body {
   --mdc-theme-primary: rgb(252 108 9);
 
-  margin: 0;
   font-family:
     var(
       --mdc-typography-headline5-font-family,
       var(--mdc-typography-font-family, Roboto, sans-serif)
     );
+}
+
+#app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(90deg, rgb(6 100 82) 0%, rgb(40 235 200) 150%);
 }
